--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.2",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.5.3",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.13.8",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
