--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.17.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
