--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.13.8",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
